--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "S1",
+  "name": "s1",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "main.js",
   "author": "Leonardo",
   "license": "MIT",
   "dependencies": {
-    "crypto-js": "^4.2.0"
+    "body-parser": "^1.20.2",
+    "crypto-js": "^4.2.0",
+    "express": "^4.19.2"
   }
 }
